nginx-chapitre5-lesson1-master/projet3/k8s/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: auth-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: auth-app
    spec:
      containers:
        - name: api
          image: dymafr/projet5-node
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /api/user/current
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/user/current
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
