nginx-chapitre5-lesson1-master/projet3/k8s/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app.kubernetes.io/name: vue-app
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vue-app
      app.kubernetes.io/component: frontend
      app.kubernetes.io/part-of: auth-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vue-app
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: auth-app
    spec:
      containers:
        - name: frontend
          image: dymafr/projet5-vue
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
